# shm_serving

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark_mapping_visit_client.cpp  benchmark_mapping_visit_server.cpp  gen_data.sh
env/: deploy.sh  run.sh
env/conf/: shm_serving.conf
example/: CMakeLists.txt  visitor.cpp
shm_serving/: CMakeLists.txt
shm_serving/api/: CMakeLists.txt  data_visitor.h  shared_memory_visitor.h
shm_serving/ipc/: CMakeLists.txt  ipc.h  segment_manager.h  shared_containers.h  shared_event.h  shared_object.h  shared_ptr.h
shm_serving/serving/: CMakeLists.txt  data_container_holder.h  data_loader.h  data_manager.h  event_monitor.h  file_incremental_loader.h  file_loader.h  gflags.cpp  loader_manager.h  main.cpp  multiple_executor.h  shared_memory_manager.h  task_dispatcher.h
shm_serving/serving/config/: loader_factory.h
shm_serving/serving/data_loader/: line_loader.h
shm_serving/serving/proto/: CMakeLists.txt  config.pb.cc  config.pb.h  config.proto
shm_serving/serving/util/: asio_thread.h  chrono_timer.h  protobuf_config_parser.h  time_spliter.h  version_adaptor.h
shm_serving/shared/: CMakeLists.txt  data_container.h  shared_memory_store.h  shared_storage.h  shared_switchover_store.h
tools/: CMakeLists.txt  shared_memory_remover.cpp
